<resources>
    <string name="app_name">Calculator</string>
    <string name="enter_value">enter_value</string>
    <string name="enterValue">enter_value</string>
    <string name="enter_valueees">enter_value</string>
    <string name="result">Result</string>
    <string name="value">value</string>
    <string name="valueee">Value</string>
    <string name="string">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">divide</string>
    <string name="slas">/</string>
    <string name="clear">Clear</string>
    <string name="equal">=</string>
    <string name="eqoals">=</string>
    <string name="app_logo">app logo</string>
    <string name="enter_input_value">Enter input value</string>
    <string name="Cannot">Cannot divide by zero\n\n\n</string>
    <string name="Cannot_divide_by_zero">cannot divide by zero</string>
    <string name="calculator_related">calculator_related</string>
    <string name="reminder_name">Reminder Name</string>
    <string name="done">Done</string>
    <string name="valuess">value</string>
    <string name="resultsss">Result</string>
    <string name="pluss">+</string>
    <string name="minuss">-</string>
    <string name="dividee">/</string>
    <string name="multiplyee">*</string>
    <string name="equall">=</string>
    <string name="clearss">Clear</string>
    <string name="calculator_logo">calculator logo</string>
    <string name="singapore">Singapore</string>
    <string name="Placeholder">placeholder\n\n</string>
    <string name="camera">Camera</string>
    <string name="singapure">Singapore</string>
    <string name="settings">Settngs</string>
    <string name="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using .Content here, content here, making it look like readable English. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here making it look like readable English.</string>
    <string name="upload">Upload</string>
    <string name="discard">Discard</string>
    <string name="leica_m_typ_240">Leica M Typ 240</string>
    <string name="f_4_16s_iso_200">f/4 16s ISO 200</string>
    <string name="next">Next</string>
    <string name="second_activity">second activity</string>
    <string name="_0">0</string>
    <string name="Bracket">( )</string>
    <string name="Percent">%</string>
    <string name="Clearbtn">C</string>
    <string name="divided">÷</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="nine">9</string>
    <string name="Multiply">×</string>
    <string name="Equal">=</string>
    <string name="Minus">-</string>
    <string name="Plus">+</string>
    <string name="Dot">.</string>
    <string name="Zero">0</string>
    <string name="PlusMinus">+/-</string>
    <string name="Three">3</string>
    <string name="Two">2</string>
    <string name="One">1</string>
    <string name="Four">4</string>
    <string name="FIve">5</string>
    <string name="Six">6</string>
</resources>