<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:background="@color/white"
    android:paddingEnd="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/calculator_logotwo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <EditText
            android:id="@+id/et_test"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autofillHints="null"
            android:hint="@string/value"
            android:inputType="number"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_second_test"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autofillHints="null"
            android:hint="@string/value"
            android:inputType="number"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_weight=".5"
            android:contentDescription="@string/calculator_related"
            android:src="@drawable/equal" />

        <TextView
            android:id="@+id/etResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/result"
            android:paddingStart="30dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/plusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="30dp"
                    app:backgroundTint="@color/sky"
                    android:text="@string/string"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/minusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/minus"
                    app:backgroundTint="@color/orange"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/multiplyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="30dp"
                    app:backgroundTint="@color/purple"
                    android:text="@string/multiply"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/divideButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:backgroundTint="@color/lime"
                    android:text="@string/slas"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/equalBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:backgroundTint="@color/green"
            android:text="@string/eqoals"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        app:backgroundTint="@color/red"
        android:layout_marginEnd="10dp"
        android:text="@string/clear"
        android:textAllCaps="false"
        android:textSize="20sp" />

</LinearLayout>

